# DNSServer

./: Cargo.toml
src/: main.rs  server.rs
src/server/: http.rs  udp.rs
