[package]
name = "DnsServer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.88"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = "0.22"
tokio-rustls = "0.24"
rcgen = "0.12"
http = "1.0"